# binkleyforce

./: .gitignore  .travis.yml  CHANGES  CHANGES.fidoman  CHANGES.kst  CHANGES.ugenk  FAQ  INSTALL  INSTALL.ru  README  README.OpenWRT  README.kst  README.ugenk  SYSLOG  TODO  io_unix_tio.diff
contrib/: bflan  callout.sh  outman  timesync.tcl
contrib/bfha/: README  bfha-debian.pl  bfha.pl
contrib/init.d/: bforce  bforce.debian
contrib/u-srif/: INFO  u-srif-index.py  u-srif-lookup.py  u-srif.py
contrib/u-srif/conf/: report.footer  report.header  u-srif.aliases  u-srif.conf  u-srif.dirs
contrib/u-srif/lib/: uconfig.py  udbase.py  ufido.py  unodestat.py  utmpl.py  uutil.py
debian/: Makefile  Makefile.am  Makefile.in  README.Debian  bfha.def  bfindex.1  bforce.1  bforce.postinst.debhelper  bforce.postrm.debhelper  bforce.prerm.debhelper  bfstat.1  changelog  conffiles  control  copyright  default  dirs  docs  init.d  logrotate  nlookup.1  outman.1  postinst  postrm  preinst  prerm  rules  rules-1
docs/: bforce-binkp  bforce-ifc  readme.txt
examples/: bforce.conf  bforce.passwd  bforce.subst  freq.aliases  freq.dirs
rpm/: bforce.spec  buildrpm.sh
source/: .version  ChangeLog  Makefile  Makefile.in  config.status  configure  configure.in  local-conf  openwrt-conf  openwrt18-conf
source/bforce/: TODO_netspool  bforce.c  conf_deinit.c  conf_get.c  conf_proc.c  conf_read.c  daemon.c  daemon_branch.c  daemon_call.c  daemon_lines.c  expression.c  expression.tab.c  expression.y  expression_lex.c  freq_bark.c  freq_proc.c  freq_srif.c  freq_wazoo.c  io_modem.c  io_tcpip.c  io_unix_lock.c  io_unix_modem.c  io_unix_tio.c  io_unix_tty.c  logger.c  netspool.c  nodelist.c  os_os2.c  os_unix.c  outb_bsy.c  outb_flo.c  outb_fsqueue.c  outb_getname.c  outb_scan.c  outb_sysqueue.c  prot_binkp.c  prot_binkp_api.c  prot_binkp_crypt.c  prot_binkp_misc.c  prot_common.c  (+25 more)
source/bfutil/: bfindex.c  bfstat.c  netspool.c  nlookup.c
source/include/: acconfig.h  bforce.h  config.h  config.h.in  confread.h  daemon.h  freq.h  includes.h  io.h  logger.h  netspool.h  nodelist.h  os.h  outbound.h  prot_binkp.h  prot_common.h  prot_emsi.h  prot_yoohoo.h  prot_zmodem.h  session.h  util.h  version.h
